# minicore

./: .gitmodules  .travis.yml  LICENSE  Makefile  README.md  benchmark_source.md  dynsetup.py  minicore.toml  notes.md  setup.cfg  setup.py
code/: Makefile  README.md  dmlsearch.cpp  graph.py
data/: cauchy_137_dimacs.graph  celegansneural.graph  line.dimacs.gr  line.dimacs.graph
docs/: msr.md
exp/: generate_bregman_data.py  generate_kmeans_data.py
minicore/: __init__.py  recursive_cluster.py
network_simplex/: full_bipartitegraph.h  network_simplex_simple.h
paper2020/: astro-ph.graph  celegans_metabolic.graph  celegansneural.graph  chesapeake.graph  dolphins.graph  fake_imbalanced.gr  football.graph  miniosm.gr
python/: README.md  pyarrcmp.cpp  pycentroid.cpp  pycluster.cpp  pycluster.h  pycluster_csr.cpp  pycluster_dense.cpp  pycluster_soft.cpp  pycluster_soft.h  pycluster_softcsr.cpp  pycluster_softdense.cpp  pycmp.cpp  pycounthist.cpp  pycs.cpp  pycsparse.cpp  pycsparse.h  pydense.cpp  pyfgc.cpp  pyfgc.h  pyhashers.cpp  pyhelpers.h  pyhvg.cpp  pymerge.cpp  pyomp.cpp  pysmw.cpp  setup.py  smw.h  utility.cpp  utility.h
results/: 2223033189218381242.table_out.tsv  4882624242765850365.table_out.tsv  8045973364311558811.table_out.tsv  NY.results.table_out.tsv  b99_iterthor.tar.zst  brooklyn2nystate.k20.table_out.coreset.runtime  brooklyn2nystate.table_out.tsv  brooklynfull30t.15..table_out.15.tsv  coreset_runtimes.tar.zst  final_biased.coords.txt  final_biased.tsv  financial_district.exp.k10.sample.biased.i8.coords.txt  paraguay.table_out.tsv  (+2 more)
src/: btest.cpp  (+34 more)
(+333 files in other folders)
