[metadata]
# replace with your username:
name = minicore
version = 0.3
author = Daniel Baker
author_email = dnb@cs.jhu.edu
description = Python bindings for minicore, a fast library for clustering
long_description = file: python/README.md
long_description_content_type = text/markdown
url = https://github.com/dnbaker/minicore
project_urls =
    Bug Tracker = https://github.com/dnbaker/minicore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where=
